# pdf_translator

./: READMEmd  pyproject.toml
logic/: ai_translator.py
media/markdowns/: Studienverlaufsplan_BSc_Mathe_Stand_10.10.23_english_to_korean.md  black_hat_rust_english_to_korean.md
pdf_translator/: forms.py  models.py  urls.py  views.py
pdf_translator/migrations/: 0001_initial.py  0002_alter_translator_created_at_and_more.py  0003_translator_model_name_alter_translator_created_at_and_more.py
templates/: index.html  success.html
translator_django/: asgi.py  settings.py  urls.py  wsgi.py
