[tool.poetry]
name = "translator"
version = "0.1.0"
description = "pdf translator with openai api"
authors = ["wooseok <wooseok.yang@check24.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
psycopg2 = "^2.9.9"
ruff-lsp = "^0.0.54"
supabase = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


