[tool.poetry]
name = "translator"
version = "0.1.0"
description = "pdf translator with openai api"
authors = ["wooseok <wooseok.yang@check24.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <4"
django = "^5.0.7"
psycopg2 = "^2.9.9"
ruff-lsp = "^0.0.54"
supabase = "^2.6.0"
openai = "^1.40.8"
pdf2image = "^1.17.0"
pillow = "^10.4.0"
markdown-pdf = "^1.3"
pypandoc = "^1.13"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


